# mipt-assignments

./: README.md
a_star/: Makefile  a_star.cpp  a_star.h  distance_estimators.cpp  distance_estimators.h  grid.cpp  grid.h  input.txt  main.cpp  makefile
a_star/src/: distance_estimators.cpp  distance_estimators.h  grid.cpp  grid.h  main.cpp  solver.cpp  solver.h
acos/10_chat/: main.c
berman-karpinski/: README.md  main.cpp
concurrency/: CMakeLists.txt  futex.cpp
concurrency/include/: futex.hpp
concurrency/test/: test.cpp
dbases/: main.c  other_code.c  queries.txt
tsp/: Makefile  main.cpp  visualizer.py
